...
  @override
  Widget build(BuildContext context) {
    return DefaultTabController(
      length: 5,
      child: Scaffold(
        appBar: AppBar(
          title: const Text('Resources'),
          actions: [
            IconButton(
              key: const Key('batch-operations-icon'),
              icon: const Icon(Icons.library_books),
              tooltip: 'Batch operations',
              onPressed: () {
...
                ),
              ),
            ],
          ),
        ),
        floatingActionButton: FloatingActionButton(
          key: const Key('add-resource-fab'),
          onPressed: () async {
            await Navigator.of(context).push(
              MaterialPageRoute<void>(
                builder: (_) => const AddResourceScreen(),
              ),
            );
...
